# fastapi-trello-services

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
src/: __init__.py  main.py
src/api/endpoints/: boards.py  cards.py  lists.py
src/core/: config.py
src/db/: __init__.py  base.py  init_db.py  session.py
src/models/: board.py  card.py  list.py
src/schemas/: board.py  card.py  list.py  response.py
src/services/: board.py  card.py  list.py
src/utils/: env.py  response.py
tests/: conftest.py  test_board.py  test_card.py  test_list.py
