[project]
name = "fastapi-trello-services"
version = "0.1.0"
requires-python = ">=3.13"
packages = [{include = "src"}]
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.121.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.0",
    "sqlmodel>=0.0.27",
]

[tool.fastapi]
entrypoint = "src.main:app"

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "pytest-cov",
]

# Ruff configuration
[tool.ruff]
src = ["src"]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = ["E", "F", "I", "N", "W", "D", "UP", "B", "C4", "SIM", "ERA"]
ignore = ["E203", "E711", "E712", "E902"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
